Generate elements on the day panel for events within the calendar range. Compute their grid row positioning and grid column positioning to place without overlapping. Fix bug in calendar date generation where the last date of the previous month was being skipped over before the beginning of the primary month in the range.

--- a/src/components/css/Calendar.css
+++ b/src/components/css/Calendar.css
@@ -22,7 +22,7 @@
     grid-template-rows: repeat(6, 1fr);
 }
 
-.events-container {
+.events-container--calendar {
     height: 40rem;
     width: 40rem;
     position: absolute;
